--- a/cls/package.json
+++ b/cls/package.json
@@ -10,11 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.0",
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
+    "framer-motion": "^12.23.25",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.66.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.5"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
